--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
            <i class="fa-solid fa-bars" onclick="openmenu()"></i> 
         </nav>
         <div class="header-text">
-            <p>FrontEnd Developer</p>
             <div class="hi">
             <img src="images/hI.png" alt="Hi" class="Hi">
             <h1> Hi, I'm <span>Abhishek</span> <br>From India</h1>
@@ -42,10 +41,9 @@
                     <h1 class="sub-title">About Me</h1>
                 <p class="about-me">I am Abhishek Singh, a skilled professional with a passion for both frontend development and data science. With a strong 
                    foundation in HTML, CSS, and JavaScript, I have experience crafting user-centric web applications. I enjoy transforming
-                   design concepts into functional and visually appealing interfaces.<br><br>
-
-                   My interest in data extends to utilizing Python, Java, and C++ to extract valuable insights from complex datasets. I am 
-                   proficient in data manipulation and analysis using libraries like NumPy and Pandas. While I am continually exploring the 
+                   design concepts into functional and visually appealing interfaces. <br><br></p>
+                   <p>My interest in data extends to utilizing Python, Java, and C++ to extract valuable insights from complex datasets. I am proficient in data 
+                   manipulation and analysis using libraries like NumPy and Pandas. While I am continually exploring the 
                    realm of machine learning, I have applied my knowledge to projects such as question bank generation and attendance tracking
                    through facial recognition.I am a dedicated problem-solver with a keen eye for detail.I am eager to contribute my skills to 
                    a dynamic team and take on new challenges in the world of technology.</p>
