--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                         <textarea name="Message" row="6" placeholder="Your Message"></textarea>
                         <button class="btn btn2">Submit</button>
                     </form>
+                    <span id="msg"></span>
                 </div>
             </div>
         </div>
@@ -139,11 +140,17 @@
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyanJYahCBLR1zOs7Vdi58Y6wk10ryWp4U4AxmtnKv5V2LgSp_6RstBm8q3-FHbMANAEQ/exec'
         const form = document.forms['submit-to-google-sheet']
-      
+      const msg=document.getElementById("msg")
         form.addEventListener('submit', e => {
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => console.log('Success!', response))
+            .then(response => {form.reset()
+                msg.innerHTML = "Message Sent Successfully!!"
+                setTimeout(function(){
+                    msg.innerHTML=""
+                },5000)
+        
+            })
             .catch(error => console.error('Error!', error.message))
         })
       </script>
