committed to add project data

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                             <li><span>Web Development</span><br>Web app development</li>
                             <li><span>Data Science</span><br>Data analysis and manipulation using Python(different libraries) and Machine Learning</li>
                             <li><span>Database management</span><br>Understanding of SQL and MongoDB</li>
+                            <li><span>Tools & Technologies</span><br>MS PowerPoint, MS Word, MS Excel, GIT, Github, Visual Studio Code, Google Sheets, Appscript</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="projects">
@@ -66,7 +67,12 @@
                             <li><span>Weather API | HTML, CSS, Javascript</span><br>Creating a Weather API front-end project involves building an interface that interacts with a weather API to
                                 provide users with real-time weather information.</li>
                             <li><span>Automatic Question Bank Generating Software | Python, Visual Studio Code</span><br> Developed software to automatically generate question banks, streamlining the examination process.</li>
-                        </ul>
+                       <li><span>Investigating Netflix Movies | Python, Numpy, Matplotlib</span><br>Determined whether movie lengths are actually getting shorter and explain some of the contributing factors, if any.</li>
+                        <li><span>Course Builder Website | React.js</span><br>Designed a Course Builder website which allows users to create and organize
+                            course content. Users can add links, upload images, PDF files, and
+                            create modules to categorize these resources systematically.</li>
+                            <li><span>Portfolio website | HTML, CSS, Javascript, SpreadSheet, AppScript</span><br>Designed the website to provide an overview of my professional background, highlight the projects I've worked on, and offer a glimpse into my skills and expertise.</li>
+                    </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
@@ -91,6 +97,8 @@
                     <p><i class="fa-solid fa-phone"></i>+91-9919830629</p>
                     <div class="social-icons">
                         <a href="https://www.facebook.com/profile.php?id=100010244557328"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/abhisheksingh9941/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/Abhishek02408"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/abhishek-singh-58a792221/"><i class="fa-brands fa-linkedin"></i></a>  
                     </div>
                     <a href="images/AbhiResume1.pdf" class="btn btn2">Download CV</a>
@@ -106,8 +114,9 @@
                 </div>
             </div>
         </div>
+        <!-----------------------------copyright-->
         <div class="copyright">
-            <p>Copyright #AbhiCreation</p>
+            <p>Copyright #AbhiCreation<i class="fa-solid fa-heart"></i></p>
         </div>
     </div>
     <script>
