committed for responsiveness

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="header-text">
             <div class="hi">
-            <img src="images/hI.png" alt="Hi" class="Hi">
+            <img src="images/hl.png" alt="Hi" class="Hi">
             <h1> Hi, I'm <span>Abhishek</span> <br>From India</h1>
         </div>
         </div>
