committed for adding links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li><span>Web Development</span><br>Web app development</li>
                             <li><span>Data Science</span><br>Data analysis and manipulation using Python(different libraries) and Machine Learning</li>
                             <li><span>Database management</span><br>Understanding of SQL and MongoDB</li>
-                            <li><span>Tools & Technologies</span><br>MS PowerPoint, MS Word, MS Excel, GIT, Github, Visual Studio Code, Google Sheets, Appscript</li>
+                            <li><span>Tools & Technologies</span><br>GIT, Github, React.js, Vite, MS PowerPoint, MS Word, MS Excel, Visual Studio Code, Google Sheets, Appscript</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="projects">
