committed for adding links

--- a/index.html
+++ b/index.html
@@ -62,16 +62,19 @@
                     </div>
                     <div class="tab-contents" id="projects">
                         <ul>
-                            <li><span><a class="project"  href="https://github.com/Abhishek02408/Student_Manage">School Management Program | C++, Visual Studio Code</a></span><br>Engineered a robust School Management Program that integrated attendance, grades, and behavioral data into a
+                            <li><span><a class="project"  href="https://github.com/Abhishek02408/Student_Manage">School Management Program | C++, Visual Studio Code</a></span><br>• Engineered a robust School Management Program that integrated attendance, grades, and behavioral data into a
                                 single platform; improved data retrieval speed by significantly reducing administrative workload for educators.</li>
-                            <li><span><a class="project" href="https://github.com/Abhishek02408/Weather_API">Weather API | HTML, CSS, Javascript</a></span><br>Creating a Weather API front-end project involves building an interface that interacts with a weather API to
+                            <li><span><a class="project" href="https://github.com/Abhishek02408/Weather_API">Weather API | HTML, CSS, Javascript</a></span><br>• Creating a Weather API front-end project involves building an interface that interacts with a weather API to
                                 provide users with real-time weather information.</li>
-                            <li><span><a class="project" href="https://github.com/Abhishek02408/Automatic-Question-Bank-Generating-Software">Automatic Question Bank Generating Software | Python, Visual Studio Code</a></span><br> Developed software to automatically generate question banks, streamlining the examination process.</li>
-                       <li><span><a class="project" href="https://github.com/Abhishek02408/Investigating-Netflix-Movies">Investigating Netflix Movies | Python, Numpy, Matplotlib</a></span><br>Determined whether movie lengths are actually getting shorter and explain some of the contributing factors, if any.</li>
-                        <li><span><a class="project" href="https://github.com/Abhishek02408/todaypay_assignment">Course Builder Website | React.js</a></span><br>Designed a Course Builder website which allows users to create and organize
+                                <li><span><a class="project" href="https://github.com/Abhishek02408/Investigating-Netflix-Movies">Investigating Netflix Movies | Python, Numpy, Matplotlib</a></span><br>• Determined whether movie lengths are actually getting shorter and explain some of the contributing factors, if any.</li>
+                            <li><span><a class="project" href="https://github.com/Abhishek02408/Automatic-Question-Bank-Generating-Software">Automatic Question Bank Generating Software | Python, Visual Studio Code</a></span><br>• Developed software to automatically generate question banks, streamlining the examination process.</li>
+                        <li><span><a class="project" href="https://github.com/Abhishek02408/todaypay_assignment">Course Builder Website | React.js</a></span><br>• Designed a Course Builder website which allows users to create and organize
                             course content. Users can add links, upload images, PDF files, and
                             create modules to categorize these resources systematically.</li>
-                            <li><span><a class="project" href="https://github.com/Abhishek02408/portfolio">Portfolio website | HTML, CSS, Javascript, SpreadSheet, AppScript</a></span><br>Designed the website to provide an overview of my professional background, highlight the projects I've worked on, and offer a glimpse into my skills and expertise.</li>
+                            <li><span><a class="project">Attendance Through Facial Recognition | Python, Tkinter, OpenCV, Haar Cascade</a></span><br>• Implemented a facial recognition system using device cameras to capture and match facial images with a
+                                pre-existing database. <br>
+                                • Utilized Tkinter for GUI design and OpenCV Library for image processing.</li>
+                            <li><span><a class="project" href="https://github.com/Abhishek02408/portfolio">Portfolio website | HTML, CSS, Javascript, SpreadSheet, AppScript</a></span><br>• Designed the website to provide an overview of my professional background, highlight the projects I've worked on, and offer a glimpse into my skills and expertise.</li>
                     </ul>
                     </div>
                     <div class="tab-contents" id="education">
