commit for project add

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                                 pre-existing database. <br>
                                 • Utilized Tkinter for GUI design and OpenCV Library for image processing.</li>
                             <li><span><a class="project" href="https://github.com/Abhishek02408/portfolio">Portfolio website | HTML, CSS, Javascript, SpreadSheet, AppScript</a></span><br>• Designed the website to provide an overview of my professional background, highlight the projects I've worked on, and offer a glimpse into my skills and expertise.</li>
-                    </ul>
+                            <li><span><a class="project" href="https://github.com/Abhishek02408/Circlepe_Assign">Property Listing Web Application | HTML, CSS, Javascript, Tailwind CSS</a></span><br>• Developed a dynamic property listing web application allowing users to search, filter, and mark properties as favorites. <br>• Utilized Tailwind CSS to ensure mobile-first, fully responsive layouts across all screen sizes. <br>• Built an intuitive, user-friendly interface with real-time updates using JavaScript for improved interactivity.</li>
+                        </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
