commit for responsiveness

--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
 </head>
 <body>
     <div id="header">
-      <div class="container">
-         <nav>
-           <img src="images/logo.png" class="logo">
+      
+        <img src="images/logo.png" class="logo"> 
+        <nav>
            <ul id="sidemenu">
                <li><a href="#header">Home</a></li>
                <li><a href="#about">About</a></li>
                <li><a href="#">Services</a></li>
                <li><a href="#portfolio">Portfolio</a></li>
                <li><a href="#contact">Contact</a></li>
+               <li></li>
                <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
-           </ul>    
+           
+            </ul>    
            <i class="fa-solid fa-bars" onclick="openmenu()"></i> 
         </nav>
-        <div class="header-text">
-            <div class="hi">
-            <img src="images/hl.png" alt="Hi" class="Hi">
-            <h1> Hi, I'm <span>Abhishek</span> <br>From India</h1>
-        </div>
-        </div>
-     </div>
-    </div>
+</div>
+<div class="header-text">
+    <div class="hi">
+    <img src="images/hl.png" alt="Hi" class="Hi">
+    <h1> Hi, I'm <span>Abhishek</span> <br>From India</h1></div>
+   <img src="images/1723465036250.png" class="background-image">
+   <img src="images/phn.png" class="phn-image">
+</div>
     <!---------------------about------------->
     <div id="about">
         <div id="container">
@@ -118,10 +120,10 @@
                 </div>
             </div>
         </div>
-        <!-----------------------------copyright-->
-        <div class="copyright">
-            <p>Copyright #AbhiCreation<i class="fa-solid fa-heart"></i></p>
-        </div>
+    </div>
+     <!-----------------------------copyright-->
+     <div class="copyright">
+        <p>Copyright #AbhiCreation<i class="fa-solid fa-heart"></i></p>
     </div>
     <script>
         var tablinks=document.getElementsByClassName("tab-links");
