--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <div id="header">
-      
         <img src="images/logo.png" class="logo"> 
         <nav>
            <ul id="sidemenu">
-               <li><a href="#header">Home</a></li>
+               <li><a href="#header-t">Home</a></li>
                <li><a href="#about">About</a></li>
                <li><a href="#">Services</a></li>
-               <li><a href="#portfolio">Portfolio</a></li>
+               <li><a href="#">Portfolio</a></li>
                <li><a href="#contact">Contact</a></li>
                <li></li>
                <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
@@ -25,7 +24,7 @@
            <i class="fa-solid fa-bars" onclick="openmenu()"></i> 
         </nav>
 </div>
-<div class="header-text">
+<div id="header-t" class="header-text">
     <div class="hi">
     <img src="images/hl.png" alt="Hi" class="Hi">
     <h1> Hi, I'm <span>Abhishek</span> <br>From India</h1></div>
@@ -41,12 +40,11 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                <p class="about-me">I am Abhishek Singh, a skilled professional with a passion for both frontend development and data science. With a strong 
-                   foundation in HTML, CSS, and JavaScript, I have experience crafting user-centric web applications. I enjoy transforming
+                <p class="about-me">I am Abhishek Singh, a skilled professional with a passion for both frontend development and data science.With a strong foundation in HTML, CSS, and JavaScript,I have experience crafting user-centric web applications.I enjoy transforming
                    design concepts into functional and visually appealing interfaces. <br><br></p>
-                   <p>My interest in data extends to utilizing Python, Java, and C++ to extract valuable insights from complex datasets. I am proficient in data 
-                   manipulation and analysis using libraries like NumPy and Pandas. While I am continually exploring the 
-                   realm of machine learning, I have applied my knowledge to projects such as question bank generation and attendance tracking
+                   <p>My interest in data extends to utilizing Python,Java,and C++ to extract valuable insights from complex datasets.I am proficient in data 
+                   manipulation and analysis using libraries like NumPy and Pandas.While I am continually exploring the 
+                   realm of machine learning,I have applied my knowledge to projects such as question bank generation and attendance tracking
                    through facial recognition.I am a dedicated problem-solver with a keen eye for detail.I am eager to contribute my skills to 
                    a dynamic team and take on new challenges in the world of technology.</p>
                     <div class="tab-titles">
